# smtp-sink

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
benches/: smtp_throughput.rs
packaging/arch/: PKGBUILD
packaging/deb/: control
packaging/homebrew/: smtp-sink.rb
packaging/systemd/: smtp-sink.service
public/: index.html
src/: email.rs  error.rs  forward.rs  http.rs  lib.rs  main.rs  smtp.rs  sqlite_store.rs  store.rs  tls.rs
tests/: integration.rs
